# Varnish-Cache

./: README.md  README.rst  autogen.sh  configure.ac
doc/sphinx/: index.rst
doc/sphinx/installation/: bugs.rst  help.rst  install.rst  platformnotes.rst
doc/sphinx/phk/: spdy.rst  varnish_does_not_hash.rst
doc/sphinx/reference/: varnish-cli.rst  varnishadm.rst  varnishncsa.rst  varnishtest.rst  vcl.rst  vmod.rst  vmod_std.rst  vsl-query.rst
doc/sphinx/tutorial/: backend_servers.rst  compression.rst  index.rst  introduction.rst  peculiarities.rst  putting_varnish_on_port_80.rst  starting_varnish.rst
doc/sphinx/users-guide/: command-line.rst  devicedetection.rst  index.rst  intro.rst  params.rst  purging.rst  run_cli.rst  run_security.rst  running.rst  sizing-your-cache.rst  storage-backends.rst  vcl-actions.rst  vcl-backends.rst  vcl-built-in-subs.rst  vcl-example-acls.rst  vcl-hashing.rst  vcl-intro.rst  vcl-saint-and-grace.rst  vcl-syntax.rst  vcl-variables.rst  vcl.rst  websockets.rst
doc/sphinx/whats-new/: upgrading.rst
esi_last_modified/varnish-logo/icon/: varnish-icon.xcf
esi_last_modified/varnish-logo/logo/: varnish-logo.eps  varnish-logo.xcf
esi_last_modified/varnish-tools/firefox/: Makefile  chrome.manifest
etc/: zope-plone.vcl
fragmentation/varnish-tools/munin/: varnish_
if-none-match/varnish-tools/nagios/: Makefile.am  configure.ac
include/: binary_heap.h  shmlog_tags.h  stat_field.h  vev.h  vrt.h  vrt_obj.h  vsa.h  vsc_fields.h  vtcp.h
include/tbl/: params.h
lib/libvarnish/: Makefile.am  binary_heap.c  vev.c  vsa.c  vtcp.c
lib/libvarnishapi/: Makefile.am  vsl_cursor.c
lib/libvarnishcompat/: Makefile.am
lib/libvarnishtools/: vut.c
lib/libvcc/: Makefile.am  vcc_backend.c  vcc_compile.c  vcc_compile.h  vcc_vmod.c
lib/libvcl/: vcc_action.c  vcc_fixed_token.c  vcc_gen_obj.tcl  vcc_obj.c  vcc_token.c
lib/libvgz/: Makefile.am  vgz.h
lib/libvmod_debug/: Makefile.am  vmod.vcc  vmod_debug.c
lib/libvmod_directors/: Makefile.am
lib/libvmod_std/: Makefile.am  vmod.vcc  vmod_std.c  vmod_std_conversions.c
redhat/: varnish.initrc  varnish.service  varnish.spec  varnish.sysconfig
wrw_context_gzip/varnish-logo/: VarnishLogo2007.eps
(+66 files in other folders)
